# vbox

./: .gitignore  CHANGELOG.md  Cargo.toml  README.es.md  README.ja.md  README.ko.md  README.md  README.zh.md  install.sh
.github/actions/setup-rust/: action.yml
.github/workflows/: build.yml  coverage.yml  lint.yml  release.yml
Casks/: vbox.rb
crates/client/: Cargo.toml
crates/client/src/: app_icon.rs  brand.rs  cli.rs  clipboard.rs  launch.rs  main.rs  net.rs  volume.rs
crates/client/src/ctl/: call.rs  mod.rs  print.rs  tls.rs  token.rs  transport.rs
crates/client/src/data_plane/: mod.rs  quic.rs  router.rs  tcp.rs
crates/client/src/viewer/: adopt.rs  app.rs  dump_signal.rs  env.rs  frame.rs  fullscreen.rs  geometry.rs  input.rs  keyboard_shortcuts.rs  mod.rs  move_resize.rs  window_debug.rs
crates/client/src/viewer/ime/: emoji.rs  hangul.rs  kana.rs  mod.rs
crates/controld/: Cargo.toml
crates/controld/src/: dbus_session.rs  main.rs  snapshot.rs  socket_wait.rs  state.rs  tls.rs  utils.rs
crates/proto/: Cargo.toml
crates/proto/src/: clipboard.rs  data_plane.rs  framing.rs  handshake.rs  input.rs  lib.rs  message.rs  rpc.rs  volume.rs  window.rs
crates/server/: Cargo.toml
crates/server/src/: brand.rs  main.rs  volume.rs
crates/server/src/data_plane/: mod.rs  quic_listener.rs  router.rs  session.rs  tcp_listener.rs
crates/server/src/wayland_session/: clipboard.rs  host_clipboard.rs  input_registration.rs  io.rs  mod.rs  output.rs  signal.rs  socket.rs  surface_capture.rs  window_debug.rs
crates/vbox-cli/: Cargo.toml
crates/vbox-cli/src/: brand.rs  context.rs  distro_icons.rs  keychain.rs  library_ui.rs  machines.rs  main.rs  process.rs  remote.rs  runtime.rs  ssh.rs  symlink.rs
crates/vbox-cli/src/machines/: kind.rs  mod.rs  password.rs  probe.rs  view.rs
scripts/: build-mac-app.sh  coverage.sh  install-linux.sh
vbox-swift/: Package.swift  README.md
vbox-swift/Sources/VBoxLibrary/: L10n_AppLanguage.swift  L10n_L.swift  L10n_Store.swift  L10n_Translations.swift  MachineFormRows.swift  MachineInfoSheet.swift  Settings_LanguagePickerRow.swift  Settings_SettingsPopover.swift  VBoxLibrary.swift
