[package]
name = "vbox-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "vbox wire protocol — types, framing, handshake"

[lib]
name = "vbox_proto"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
postcard.workspace = true
anyhow.workspace = true
