[package]
name = "vbox-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "vbox user-facing clap CLI"

[[bin]]
name = "vbox"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
base64 = "0.22"
